@startuml
'https://plantuml.com/class-diagram


class ToDoListManager{
    main()
    start()
}

class ToDoListManagerController{
    UserToDoList: ToDoListObject
    AllItemsInToDoList: ListView
    currrentlySelected: String
    CurrentlySelectedToDoListLabel: Text


    closeProgramBUttonClicked()
    viewAllListItemsButtonClicked()
    viewAllCompleteListItemsButtonClicked()
    viewAllIncompleteListItemsButtonClicked()
    addNewItemToListButtonClicked()
    deleteCurrentItemFromListButtonClicked()
    editCurrentItemDescriptionButtonClicked()
    editCurrentItemDueDateButtonClicked()
    markItemCompleteButtonClicked()
    markItemIncompleteButtonClicked()
    clearListButtonClicked()
    saveListButtonClicked()
    loadListButtonClicked()
    addItemToList()
    editItemDescription()
    editItemDueDate()
    saveFile()
    loadFile()

    'GUI event handelers'
}

class ToDoListObject{
    listItems: ArrayList
    isVisible: Boolean

    ToDoListObject()
    addItemToList(String description, String dueDate)
    displayAllItemsInList()
    displayAllIncompleteItemsInList()
    displayAllCompleteItemsInList()
    saveList(String saveLocation)
    loadList(String saveLocation)
}

class ListItem{
    itemDescription: String
    itemDueDate: String
    isCompleted: Boolean

    ListItem()
    markItemComplete()
    markItemIncomplete()
    editItemDescription(String newDescription)
    editItemDueDate(String newDueDate)
    removeItemFromList()
}


class AddNewListManagerController{
    newListNameInput: TextField

    addList()
    cancelAddList()
}

class EditItemDescriptionManagerController{
    newDescriptionInput: TextField

    changeDescription()
    cancel()
}

class EditItemDueDateManagerController{
    newDueDateInput: TextField

    changeDueDate()
    cancel()
}

class LoadFileManagerController{
    filePath: TextField

    loadFileButtonClicked()
    cancel()
}

class SaveFileManagerController{
filePath: TextField

    saveFileButtonClicked()
    cancel()
}

org.javafx.Application <|-- ToDoListManager
ToDoListManager -- ToDoListManagerController
ToDoListObject *-> ListItem
ToDoListObject -- ToDoListManagerController

AddNewListManagerController -- ToDoListManagerController
EditItemDescriptionManagerController -- ToDoListManagerController
EditItemDueDateManagerController -- ToDoListManagerController
LoadFileManagerController -- ToDoListManagerController
SaveFileManagerController -- ToDoListManagerController



@enduml